--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "faker": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-scripts": "3.4.4"
   },
   "scripts": {
