--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "javascript"
   ],
   "author": "Youri Ya <yy.ainu@gmail.com>",
-  "homepage": "",
+  "homepage": "https://yygthb.github.io/whatsApp-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "faker": "^5.1.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-infinite-scroll-component": "^5.1.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
